--- a/notebooks/2B_Part_I_Exploratory_Data_Analysis_Basics.ipynb
+++ b/notebooks/2B_Part_I_Exploratory_Data_Analysis_Basics.ipynb
@@ -7,35 +7,55 @@
    "source": [
     "# Exploratory Data Analysis on Google Merchandise Store Sequence Data\n",
     "\n",
+    "### Potential Answers\n",
+    "\n",
     "Can you use python and data visualization to answer these different start questions? Can you think of any other questions that might be intresting or relevant to explore before building a model?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "9c431f84",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns"
+    "\n",
+    "## Visualization packages\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "## Purdue colors\n",
+    "purdue_colors = ['#CEB888', '#000000','#9D968D','#373A36','#C28E0E']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "db13e160",
+   "execution_count": 7,
+   "id": "009fa7ba",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Import Dataset\n",
+    "\n",
     "df = pd.read_csv('../datasets/sequence_fact.csv')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3eb0e08",
+   "metadata": {},
+   "source": [
+    "**What do the top 10 rows look like?**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "009fa7ba",
+   "id": "67ad98e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -51,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe636215",
+   "id": "ff2dafbc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -106,26 +126,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69395860",
-   "metadata": {},
-   "source": [
-    "**What is the average number of channel touchpoints per sequence?**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f60ea01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "7af7d4bb",
    "metadata": {},
    "source": [
-    "**for each channel how many touches do they have?**"
+    "**For each channel, how many touches do they have?**"
    ]
   },
   {
@@ -141,13 +145,29 @@
    "id": "d7b11028",
    "metadata": {},
    "source": [
-    "**for each channel how many sequences do they belong to**"
+    "**For each channel, how many sequences do they belong to?**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5bae4ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69395860",
+   "metadata": {},
+   "source": [
+    "**What is the number of channel touchpoints per sequence?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f60ea01",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -173,21 +193,13 @@
    "id": "504eb387",
    "metadata": {},
    "source": [
-    "**is there correlations between the touchpoints?**"
+    "**Are there correlations between certain channels in sequences?**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "43ca7014",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aeefd89f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -203,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d7db14e",
+   "id": "2b8c2d9b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -225,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
